--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "test": "jest --coverage"
   },
   "peerDependencies": {
     "react": ">= 17"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
@@ -40,6 +43,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.2",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
