--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Enables creation of grouped component inheritance hierarchies for React components",
   "private": false,
   "homepage": "https://github.com/SLTKA/react-grouped-children",
+  "author": "Alexandr Yeskov",
   "bugs": {
     "url": "https://github.com/SLTKA/react-grouped-children/issues"
   },
@@ -10,14 +11,22 @@
     "type": "git",
     "url": "https://github.com/SLTKA/react-grouped-children"
   },
+  "keywords": [
+    "react",
+    "children",
+    "group",
+    "combine",
+    "slots"
+  ],
   "license": "MIT",
-  "version": "0.1.2",
-  "type": "module",
-  "main": "dist/index.js",
+  "version": "0.1.3",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
   },
@@ -25,12 +34,12 @@
     "/dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c && dts-bundle-generator ./src/index.ts -o ./dist/index.d.ts --no-banner",
     "lint": "eslint ./",
     "test": "jest --coverage"
   },
   "peerDependencies": {
-    "react": ">= 17"
+    "react": ">=16.14 <17 || >=17.0.2 <18 || >=18.1"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
@@ -38,13 +47,19 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "dts-bundle-generator": "^8.0.1",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.4.2",
+    "prettier": "^2.8.7",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^3.20.5",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.4"
   }
