Add types to exports

--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "slots"
   ],
   "license": "MIT",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs",
       "import": "./dist/index.mjs"
     },
